fixed z-index of line

--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -19,6 +19,7 @@
     height: 0.1rem;
     background-color: var(--color-white);
     filter: opacity(30%);
+    z-index: -1;
   }
 }
 
